--- a/templates/my_404.html
+++ b/templates/my_404.html
@@ -1,9 +1,7 @@
 {% extends "my_base.html" %}
 
-{% block title %}Flasky{% endblock %}
-
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {{ name }}!</h1>
+    <h1>Not Found</h1>
 </div>
 {% endblock %}
